<resources>
    <string name="app_name" translatable="false">Task Planner</string>
    <string name="task">Задача</string>
    <string name="no_tasks_text">Задачи отсуствуют</string>
    <string name="task_title">Название</string>
    <string name="task_description">Описание</string>
    <string name="start_time">Дата и время начала</string>
    <string name="submit_task">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="notification">Напоминание</string>
    <string name="tasks_text">Задачи</string>

    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="settings_text">Настройки</string>
    <string name="hours">ч.</string>
    <string name="minutes">м.</string>
    <string name="edit">Изменить</string>
    <string name="remove">Удалить</string>
    <string name="mark_done">Выполнено</string>

    <string name="error_title_missing">Не указано название задачи!</string>
    <string name="error_title_exists">Задача с таким именем уже существует!</string>

    <string name="time_left">Осталось </string>
    <string name="group_education">Учёба</string>
    <string name="group_job">Работа</string>
    <string name="group_home">Дом</string>
    <string name="group_other">Другое</string>
    <string name="days">д.</string>
    <string name="ago">тому назад</string>
    <string name="error_time_missing">Установите время упоминания!</string>
    <string name="notification_set">Уведомление установлено</string>
    <string name="notification_not_set">Уведомление не установлено</string>
    <string name="error_forbidden_symbols">Название или описание содержит запрещенные символы</string>
    <string name="date">Дата:</string>
    <string name="time">Время:</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="task_notification">Уведомление</string>
</resources>