<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.TaskPlanner.Light">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme_edit_form"
        android:id="@+id/task_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginTop="100dp">

        <EditText
            style="@style/Theme_edit_form"
            android:id="@+id/form_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:hint="@string/task_title"
            android:textAlignment="center"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            style="@style/Theme_edit_form"
            android:id="@+id/form_description"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:hint="@string/task_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_title" />

        <TextView
            style="@style/Theme_edit_form"
            android:id="@+id/form_start_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:text="@string/start_time"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_description" />

        <TextView
            style="@style/Theme_edit_form"
            android:id="@+id/form_end_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:text="@string/end_time"
            app:layout_constraintTop_toBottomOf="@+id/form_start_date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_end_date">

            <CheckBox
                android:id="@+id/notification_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Theme_edit_form"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/notification_check"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Theme_edit_form"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        style="@style/Theme_buttonStyle"
        android:id="@+id/cancel_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/task_data"
        app:layout_constraintTop_toBottomOf="@+id/task_data" />

    <Button
        style="@style/Theme_buttonStyle"
        android:id="@+id/submit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_task"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/task_data"
        app:layout_constraintTop_toBottomOf="@+id/task_data" />


</androidx.constraintlayout.widget.ConstraintLayout>